--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="./d3/crossfilter/crossfilter.js"></script>
+	<script type="text/javascript" src="./d3/crossfilter.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
 
 </body>
