--- a/Lahore_crime_dashboard/index.html
+++ b/Lahore_crime_dashboard/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lahore Crime Rate Visualization Dashboard</title>
-  
+  <script type="text/javascript" src="./d3/d3.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
 
   
@@ -24,20 +24,20 @@
   		<div id="hour-chart" class="chart">
     		<div class="title">Hour</div>
   		</div>
-  		<div id = "neighborhood-chart" class="chart">
+	</div>
+
+	<div class = "barContainer">
+		<div id = "hBarChart">
 			<div class="title">Neighborhood</div>
 		</div>
 	</div>
-
 	<div class = "map">
 		<div id = "pakistanMap">
 			<div class="title">Map of Pakistan's Districts</div>
 		</div>
 	</div>
 
-	<script type="text/javascript" src="./d3/d3.min.js"></script>
 	<script type="text/javascript" src="./d3/crossfilter.js"></script>
-
 	<script type="text/javascript" src="./script.js"></script>
 
 </body>
