--- a/Lahore_crime_dashboard/index.html
+++ b/Lahore_crime_dashboard/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Lahore Crime Rate Visualization Dashboard</title>
   
-  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="https://d3js.org/topojson.v2.min.js"></script>
 
   
   <link rel="stylesheet" type="text/css" href="./styles.css"/>
