added the map, which is not working

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lahore Crime Rate Visualization Dashboard</title>
-  
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
 
   
