--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="shortcut icon" href="">
 <!DOCTYPE html>
 <html lang="en">
 
@@ -38,15 +39,19 @@
 	<script type="text/javascript" src="./d3/d3.min.js"></script>
 	<script type="text/javascript" src="./d3/crossfilter.js"></script>
 
+	<script type="text/javascript" src="./brushedBarChart.js"></script>
+	<script type="text/javascript" src="./mouseonBarChart.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
   <!-- JQuery + Bootstrap JS cdn -->
-  <script
+  <!-- <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
 
 </body>
 
 </html>
+
+
