attempt to create a link in choropleth

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	<script type="text/javascript" src="./d3/d3.min.js"></script>
 	<script type="text/javascript" src="./d3/crossfilter.js"></script>
 
+	<!-- <script type="text/javascript" src="./lahoreMap.js"></script> -->
+	<script type="text/javascript" src="./lahoreMap2.js"></script>
 	<script type="text/javascript" src="./brushedBarChart.js"></script>
 	<script type="text/javascript" src="./mouseonBarChart.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
