--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 	<!-- <script type="text/javascript" src="./lahoreMap.js"></script> -->
 	<script type="text/javascript" src="./lahoreMap2.js"></script>
+	<script type="text/javascript" src="./lahoreMap3.js"></script>
 	<script type="text/javascript" src="./brushedBarChart.js"></script>
 	<script type="text/javascript" src="./mouseonBarChart.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
