--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 	<script type="text/javascript" src="./d3/crossfilter.js"></script>
 
 	<!-- <script type="text/javascript" src="./lahoreMap.js"></script> -->
-	<script type="text/javascript" src="./lahoreMap2.js"></script>
-	<script type="text/javascript" src="./lahoreMap3.js"></script>
+<!-- 	<script type="text/javascript" src="./lahoreMap2.js"></script>
+ -->	
+  <script type="text/javascript" src="./lahoreMap3.js"></script>
 	<script type="text/javascript" src="./brushedBarChart.js"></script>
 	<script type="text/javascript" src="./mouseonBarChart.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
