--- a/index.html
+++ b/index.html
@@ -15,35 +15,40 @@
 <body>
 	<h1>Lahore Crime Rate Visualization Dashboard - 2014</h1>
 
-	<div id="charts">
-  		<div id="crime-type-chart" class="chart">
+	<div class="row">
+  		<div id="crime-type-chart" class="col-xs-12 col-md-3">
     		<div class="title">Crime Type</div>
   		</div>
-  		<div id="date-chart" class="chart">
+  		<div id="date-chart" class="col-xs-12 col-md-3">
     		<div class="title">Date</div>
   		</div>
-  		<div id="hour-chart" class="chart">
+  		<div id="hour-chart" class="col-xs-12 col-md-3">
     		<div class="title">Hour</div>
   		</div>
-  		<div id = "neighborhood-chart" class = "chart">
+  		<div id = "neighborhood-chart" class="col-xs-12 col-md-3">
 			<div class="title">Neighborhood</div>
 		</div>
 	</div>
 
 	<div class = "map">
 		<div id = "pakistanMap">
-			<div class="title">Map of Lahore's Towns</div>
+			<div id="map-legend">
+		    <br>
+			    <div class="title">Number of crime incidences, 2014
+			      <div class="title">0 . . . . . . . . . . . . . . . 7000</div>
+		    	</div>
 		</div>
+
+	  </div>
 	</div>
 
 	<script type="text/javascript" src="./d3/d3.min.js"></script>
 	<script type="text/javascript" src="./d3/crossfilter.js"></script>
-
-	<!-- <script type="text/javascript" src="./lahoreMap.js"></script> -->
-<!-- 	<script type="text/javascript" src="./lahoreMap2.js"></script>
- -->	
-  <script type="text/javascript" src="./lahoreMap3.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  	<script type="text/javascript" src="./lahoreMap3.js"></script>
+  	<script type="text/javascript" src="./brushedBarChart2.js"></script>
 	<script type="text/javascript" src="./brushedBarChart.js"></script>
+	<script type="text/javascript" src="./neighborhoodBarChart.js"></script>
 	<script type="text/javascript" src="./mouseonBarChart.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
   <!-- JQuery + Bootstrap JS cdn -->
@@ -52,7 +57,8 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script> -->
   <!-- Latest compiled and minified JavaScript -->
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
 </body>
 
