created links between the charts that are now working

--- a/index.html
+++ b/index.html
@@ -46,11 +46,15 @@
 	<script type="text/javascript" src="./d3/crossfilter.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   	<script type="text/javascript" src="./lahoreMap3.js"></script>
-  	<script type="text/javascript" src="./brushedBarChart2.js"></script>
+<!--   	<script type="text/javascript" src="./brushedBarChart2.js"></script> -->
 	<script type="text/javascript" src="./brushedBarChart.js"></script>
-	<script type="text/javascript" src="./neighborhoodBarChart.js"></script>
+<!-- 	<script type="text/javascript" src="./neighborhoodBarChart.js"></script> -->
 	<script type="text/javascript" src="./mouseonBarChart.js"></script>
-	<script type="text/javascript" src="./script.js"></script>
+	<script type="text/javascript" src="./timeSeriesChart.js"></script>
+	<script type="text/javascript" src="./barChart.js"></script>
+	<script type="text/javascript" src="./main.js"></script>
+<!-- 	<script type="text/javascript" src="./script.js"></script> -->
+
   <!-- JQuery + Bootstrap JS cdn -->
   <!-- <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
