--- a/index.html
+++ b/index.html
@@ -14,26 +14,27 @@
 
 <body>
 	<h1>Lahore Crime Rate Visualization Dashboard - 2014</h1>
-
+	<button>Reset</button>
 	<div class="row">
   		<div id="crime-type-chart" class="col-xs-12 col-md-3">
     		<div class="title">Crime Type</div>
   		</div>
+  		<div id = "neighborhood-chart" class="col-xs-12 col-md-3">
+			<div class="title">Neighborhood</div>
+		</div>
   		<div id="date-chart" class="col-xs-12 col-md-3">
     		<div class="title">Date</div>
   		</div>
   		<div id="hour-chart" class="col-xs-12 col-md-3">
     		<div class="title">Hour</div>
   		</div>
-  		<div id = "neighborhood-chart" class="col-xs-12 col-md-3">
-			<div class="title">Neighborhood</div>
-		</div>
 	</div>
 
 	<div class = "map">
 		<div id = "pakistanMap">
 			<div id="map-legend">
 		    <br>
+		    	<br>
 			    <div class="title">Number of crime incidences, 2014
 			      <div class="title">0 . . . . . . . . . . . . . . . 7000</div>
 		    	</div>
@@ -46,14 +47,9 @@
 	<script type="text/javascript" src="./d3/crossfilter.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   	<script type="text/javascript" src="./lahoreMap3.js"></script>
-<!--   	<script type="text/javascript" src="./brushedBarChart2.js"></script> -->
-	<script type="text/javascript" src="./brushedBarChart.js"></script>
-<!-- 	<script type="text/javascript" src="./neighborhoodBarChart.js"></script> -->
-	<script type="text/javascript" src="./mouseonBarChart.js"></script>
-	<script type="text/javascript" src="./timeSeriesChart.js"></script>
+	<script type="text/javascript" src="./timeSeriesChart2.js"></script>
 	<script type="text/javascript" src="./barChart.js"></script>
 	<script type="text/javascript" src="./main.js"></script>
-<!-- 	<script type="text/javascript" src="./script.js"></script> -->
 
   <!-- JQuery + Bootstrap JS cdn -->
   <!-- <script
