--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 	<script type="text/javascript" src="./d3/d3.min.js"></script>
 	<script type="text/javascript" src="./d3/crossfilter.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  	<script type="text/javascript" src="./lahoreMap3.js"></script>
-	<script type="text/javascript" src="./timeSeriesChart2.js"></script>
-	<script type="text/javascript" src="./barChart.js"></script>
-	<script type="text/javascript" src="./main.js"></script>
+  	<script type="text/javascript" src="./js/lahoreMap3.js"></script>
+	<script type="text/javascript" src="./js/timeSeriesChart2.js"></script>
+	<script type="text/javascript" src="./js/barChart.js"></script>
+	<script type="text/javascript" src="./js/main.js"></script>
 
   <!-- JQuery + Bootstrap JS cdn -->
   <!-- <script
