--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 	  </div>
 	</div>
 
-	<script type="text/javascript" src="./d3/d3.min.js"></script>
-	<script type="text/javascript" src="./d3/crossfilter.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  	<script type="text/javascript" src="./js/lahoreMap3.js"></script>
-	<script type="text/javascript" src="./js/timeSeriesChart2.js"></script>
-	<script type="text/javascript" src="./js/barChart.js"></script>
-	<script type="text/javascript" src="./js/main.js"></script>
+<script type="text/javascript" src="./d3/d3.min.js"></script>
+<script type="text/javascript" src="./d3/crossfilter.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="./js/lahoreMap3.js"></script>
+<script type="text/javascript" src="./js/timeSeriesChart2.js"></script>
+<script type="text/javascript" src="./js/barChart.js"></script>
+<script type="text/javascript" src="./js/main.js"></script>
 
   <!-- JQuery + Bootstrap JS cdn -->
   <!-- <script
@@ -57,8 +57,9 @@
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script> -->
   <!-- Latest compiled and minified JavaScript -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
 </body>
 
