--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-	<h1>Lahore Crime Rate Visualization Dashboard - 2014</h1>
+	<h2> Lahore Crime Rate: Unprecedented in 2014</h2>
+	<br>
+	<p1>Significant amount of resources have been spent in preventing crime in Lahore over the past few years. <br>However, most of these efforts have been directed to prevent crime in a certain neighborhood and thus fail to recognize other aspects <br>of crime. What type of crimes occur where? Do some types of crime such as robbery and murder occur more frequently in certain time periods? <br>Through this project, I aim to shed light on some of these aspects for better policing decision-making. </p1>
+	<br>
+	<br>
 	<button>Reset</button>
 	<div class="row">
   		<div id="crime-type-chart" class="col-xs-12 col-md-3">
@@ -23,7 +27,7 @@
 			<div class="title">Neighborhood</div>
 		</div>
   		<div id="date-chart" class="col-xs-12 col-md-3">
-    		<div class="title">Date</div>
+    		<div class="title">Month</div>
   		</div>
   		<div id="hour-chart" class="col-xs-12 col-md-3">
     		<div class="title">Hour</div>
@@ -35,9 +39,10 @@
 			<div id="map-legend">
 		    <br>
 		    	<br>
-			    <div class="title">Number of crime incidences, 2014
-			      <div class="title">0 . . . . . . . . . . . . . . . 7000</div>
-		    	</div>
+			    	<br>
+				    <div class="legend-title">Number of crime incidences, 2014
+				      <div class="legend-title">0 . . . . . . . . . . . . 7000</div>
+			    	</div>
 		</div>
 
 	  </div>
@@ -46,10 +51,12 @@
 <script type="text/javascript" src="./d3/d3.min.js"></script>
 <script type="text/javascript" src="./d3/crossfilter.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script type="text/javascript" src="./js/lahoreMap3.js"></script>
+<script type="text/javascript" src="./js/lahoreMap3.js"></script>
 <script type="text/javascript" src="./js/timeSeriesChart2.js"></script>
 <script type="text/javascript" src="./js/barChart.js"></script>
 <script type="text/javascript" src="./js/main.js"></script>
+
+<p1>Data Source: </p1><p2>Police Department of Lahore (2014)<br>Visualization Dashboard inspired by John Guerra's <a href="https://github.com/john-guerra/d3BrushAndLinkingExample"> 'Brush and Link' example </a> and Micha Stubb's <a href="https://bl.ocks.org/micahstubbs/66db7c01723983ff028584b6f304a54a"> original crossfilter demo in D3 V4.</a></br></p2>
 
   <!-- JQuery + Bootstrap JS cdn -->
   <!-- <script
