made changes to the alignment of text

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 
 <body>
+	<br>
 	<h2> Lahore Crime Rate: Unprecedented in 2014</h2>
 	<br>
-	<p1>Significant amount of resources have been spent in preventing crime in Lahore over the past few years. <br>However, most of these efforts have been directed to prevent crime in a certain neighborhood and thus fail to recognize other aspects <br>of crime. What type of crimes occur where? Do some types of crime such as robbery and murder occur more frequently in certain time periods? <br>Through this project, I aim to shed light on some of these aspects for better policing decision-making. </p1>
+	<p1>Significant amount of resources have been spent in preventing crime in Lahore over the past few years. </p1><br><p2>However, most of these efforts have been directed to prevent crime in a certain neighborhood and thus fail to recognize other aspects </p2><br><p3>of crime. What type of crimes occur where? Do some types of crime such as robbery and murder occur more frequently in certain time periods? </p3><br><p4>Through this project, I aim to shed light on some of these aspects for better policing decision-making.</p4>
 	<br>
 	<br>
 	<button>Reset</button>
@@ -56,7 +57,7 @@
 <script type="text/javascript" src="./js/barChart.js"></script>
 <script type="text/javascript" src="./js/main.js"></script>
 
-<p1>Data Source: </p1><p2>Police Department of Lahore (2014)<br>Visualization Dashboard inspired by John Guerra's <a href="https://github.com/john-guerra/d3BrushAndLinkingExample"> 'Brush and Link' example </a> and Micha Stubb's <a href="https://bl.ocks.org/micahstubbs/66db7c01723983ff028584b6f304a54a"> original crossfilter demo in D3 V4.</a></br></p2>
+<p5>Data Source: </p5><p6>Police Department of Lahore (2014)<br></p6><p7>Visualization Dashboard inspired by John Guerra's <a href="https://github.com/john-guerra/d3BrushAndLinkingExample"> 'Brush and Link' example </a> and Micha Stubb's <a href="https://bl.ocks.org/micahstubbs/66db7c01723983ff028584b6f304a54a"> original crossfilter demo in D3 V4.</a></br></p7><br>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
